// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Author Profile test Render the authors profile as expected for a UQ researcher) 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b2vqdl-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-bc7sky-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <div
          aria-label="Photograph of  Professor J Researcher"
          class="MuiAvatar-root MuiAvatar-circular css-1sguapy-MuiAvatar-root"
          title="Professor J Researcher"
        >
          <img
            class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
            src="https://its-ss-academicportal.s3.amazonaws.com/prod/uqresearchers/photo/thumbnail_14.jpg"
          />
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-1s8t1s1-MuiTypography-root"
                >
                  Professor
                   
                  J
                   
                  Researcher
                </h6>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              >
                <span
                  class="MuiTypography-root MuiTypography-caption css-cj8z3c-MuiTypography-root"
                >
                  <b>
                    Affiliate Professor
                  </b>
                  , Institute for Molecular Bioscience
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption css-cj8z3c-MuiTypography-root"
                >
                  <b>
                    Affiliate Professorial Res Fellow
                  </b>
                  , School of Chemistry and Molecular Biosciences
                </span>
                <span
                  class="MuiTypography-root MuiTypography-caption css-cj8z3c-MuiTypography-root"
                >
                  <b>
                    ARC Australian Laureate Fellow
                  </b>
                  , The University of Queensland Diamantina Institute
                </span>
              </div>
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-13gd6xk-MuiGridLegacy-root"
              style="margin-top: 12px;"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <a
                  class="css-ztx283"
                  data-analyticsid="researcher-link"
                  data-testid="researcher-link"
                  href="https://www.webofscience.com/wos/author/rid/A-1137-2007"
                  id="researcher-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="Your Researcher (ISI) ID is A-1137-2007 - Click to review"
                    class="fez-icon researcher ok"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <a
                  class="css-ztx283"
                  data-analyticsid="scopus-link"
                  data-testid="scopus-link"
                  href="http://www.scopus.com/authid/detail.url?authorId=35478294000"
                  id="scopus-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="Your Scopus ID is 35478294000 - Click to review"
                    class="fez-icon scopus ok"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <a
                  class="css-ztx283"
                  data-analyticsid="google_scholar-link"
                  data-testid="google_scholar-link"
                  href="https://scholar.google.com.au/citations?user=kUemDfMAAAAJ"
                  id="google_scholar-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="Your Google Scholar ID is kUemDfMAAAAJ - Click to review"
                    class="fez-icon google_scholar ok"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <a
                  class="css-ztx283"
                  data-analyticsid="orcid-link"
                  data-testid="orcid-link"
                  href="https://orcid.org/0000-0001-1111-1111"
                  id="orcid-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="Your ORCID ID is 0000-0001-1111-1111 - Click to review"
                    class="fez-icon orcid ok"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <a
                  aria-label="Click to visit your ORCID profile"
                  href="https://orcid.org/0000-0001-1111-1111"
                  id="orcid"
                  tabindex="0"
                  target="_blank"
                  title="Click to visit your ORCID profile"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption css-cj8z3c-MuiTypography-root"
                  >
                     orcid.org/0000-0001-1111-1111
                  </span>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-clagcp-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-direction-xs-column css-ylnelu-MuiGridLegacy-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Author Profile test Renders empty div if there is no profile but profile image exists 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b2vqdl-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-bc7sky-MuiGridLegacy-root"
    >
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-14euy9a-MuiGridLegacy-root"
      >
        <div
          aria-label="Photograph of    "
          class="MuiAvatar-root MuiAvatar-circular css-1sguapy-MuiAvatar-root"
          title="  "
        >
          <img
            class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
            src="https://its-ss-academicportal.s3.amazonaws.com/prod/uqresearchers/photo/thumbnail_.jpg"
          />
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1skj0mj-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              >
                <h6
                  class="MuiTypography-root MuiTypography-h6 css-1s8t1s1-MuiTypography-root"
                >
                   
                   
                </h6>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              />
            </div>
          </div>
          <div
            class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-13gd6xk-MuiGridLegacy-root"
              style="margin-top: 12px;"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <a
                  class="css-ztx283"
                  data-analyticsid="researcher-link"
                  data-testid="researcher-link"
                  href=" https://web.library.uq.edu.au/research-and-publish/orcid-and-researcher-identifiers/web-science-researcher-profile"
                  id="researcher-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="You are not linked to Researcher (ISI) - Click for more information"
                    class="fez-icon researcher error"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <a
                  class="css-ztx283"
                  data-analyticsid="scopus-link"
                  data-testid="scopus-link"
                  href="https://web.library.uq.edu.au/research-and-publish/orcid-and-researcher-identifiers/google-scholar-scopus-and-other-profiles"
                  id="scopus-link"
                  rel="noopener noreferrer"
                  tabindex="0"
                  target="_blank"
                >
                  <div
                    aria-label="You are not linked to Scopus - Click for more information"
                    class="fez-icon scopus error"
                    data-mui-internal-clone-element="true"
                    style="width: 32px; height: 32px; border-radius: 32px;"
                  />
                </a>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <a
                  class="css-ozogg6"
                  data-testid="google_scholar"
                  id="google_scholar"
                  tabindex="0"
                  title="You are not linked to Google Scholar - Click to link via ORCID"
                >
                  <div
                    class="fez-icon google_scholar dashboard error"
                    title="You are not linked to Google Scholar - Click to link via ORCID"
                  />
                </a>
              </div>
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
              >
                <a
                  class="css-ozogg6"
                  data-testid="orcid"
                  id="orcid"
                  tabindex="0"
                  title="You are not linked to ORCID - Click for more information"
                >
                  <div
                    class="fez-icon orcid dashboard error"
                    title="You are not linked to ORCID - Click for more information"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-auto css-clagcp-MuiGridLegacy-root"
      >
        <div
          class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-direction-xs-column css-ylnelu-MuiGridLegacy-root"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Dashboard Author Profile test Renders empty div if there is no profile loaded 1`] = `
<div>
  <div
    class="AuthorProfile empty"
  />
</div>
`;
